--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 		<title>Hank Quinlan, Horrible Cop</title>
 		<!-- link to main stylesheet -->
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
+		<!-- link to main stylesheet -->
+		<link rel="stylesheet" type="text/css" href="/css/main.css">
 
 	</head>
 	<body>
