--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Hi there, I'm Hank Quinlan!</h1>
-				<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="https://raisahernandez.github.io/cla00.html">Read more about my life...</a></p>
+				<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="https://raisahernandez.github.io/General-Ecology/Class01_Intro_to_R.html">Read more about my life...</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
