--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Hank Quinlan, Horrible Cop</title>
+		<title>BIOL 350: General Ecology</title>
 		<!-- link to main stylesheet -->
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 		<!-- link to main stylesheet -->
@@ -19,8 +19,8 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>Hi there, I'm Hank Quinlan!</h1>
-				<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="https://raisahernandez.github.io/General-Ecology/Class01_Intro_to_R.html">Read more about my life...</a></p>
+        		<h1>BIOL 350: General Ecology</h1>
+				<p> <a href="https://raisahernandez.github.io/General-Ecology/Class01_Intro_to_R.html">Class 01</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
