--- a/index.html
+++ b/index.html
@@ -18,10 +18,9 @@
 		</div><!-- /.container -->
 		<footer>
     		<ul>
-        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
+        		<li><a href="mailto:rai.hernandezpacheco@csulb.edu">email</a></li>
 			</ul>
 		</footer>
 	</body>
 </html>
-4
+
