--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>BIOL 350: General Ecology</h1>
+			<h2>California State University</h2>
 				<p> <a href="https://raisahernandez.github.io/General-Ecology/Class01_Intro_to_R.html">Class 01</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
