--- a/Class01_Intro_to_R.html
+++ b/Class01_Intro_to_R.html
@@ -286,7 +286,7 @@ cs %&gt;%
 <pre class="r"><code># When managing date data you should tell R that you are dealing with dates using &quot;&quot;. 
 filter(cs,date_of_birth==&quot;2011-08-05&quot;)</code></pre>
 <blockquote>
-<p><strong>Challenge:</strong> Using pipes, subset the cs data to include females being born after 2000-01-01 and retain only the age_at_delyvery column. Give a name to your new object.</p>
+<p><strong>Challenge:</strong> Using pipes, subset the cs data to include females being born after 2000-01-01 and retain only the age_at_delivery column. Give a name to your new object.</p>
 </blockquote>
 
 
