--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     		<div class="blurb">
         		<h1>BIOL 350: General Ecology</h1>
 			<h2>California State University-Long Beach, Fall 2019</h2>
-			<p> <a href="https://raisahernandez.github.io/General-Ecology/Day1_Install_R_RStudio.pdf">Class 00</a></p>
-			<p> <a href="https://raisahernandez.github.io/General-Ecology/Day2_Intro_to_R.html">Class 02</a></p>
-			<p> <a href="https://raisahernandez.github.io/General-Ecology/Day3_climate.html">Class 03</a></p>
+			<p> <a href="https://raisahernandez.github.io/General-Ecology/Day1_Install_R_RStudio.pdf">Class 00 - Installing R and RStudio</a></p>
+			<p> <a href="https://raisahernandez.github.io/General-Ecology/Day2_Intro_to_R.html">Class 02 - Intro to R</a></p>
+			<p> <a href="https://raisahernandez.github.io/General-Ecology/Day3_climate.html">Class 03 - Climate</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
