--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 			<p> <a href="https://raisahernandez.github.io/General-Ecology/Day2_Intro_to_R.html">Class 02 - Intro to R</a></p>
 			<p> <a href="https://raisahernandez.github.io/General-Ecology/Day3_climates.html">Class 03 - Climates</a></p>
 			<p> <a href="https://raisahernandez.github.io/General-Ecology/Day4_biomes.html">Class 04 - Biomes</a></p>
+			<p> <a href="https://raisahernandez.github.io/General-Ecology/Day11_population_distributions.html">Class 11 - Population Distributions</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
