--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     		<div class="blurb">
         		<h1>BIOL 350: General Ecology</h1>
 			<h2>California State University-Long Beach, Fall 2019</h2>
-			<p>(Each activity builds upon previous ones)</p>
+			<h3>(Each activity builds upon previous ones)</h3>
 			<p> <a href="https://raisahernandez.github.io/General-Ecology/Day1_Install_R_RStudio.pdf">Class 00 - Installing R and RStudio</a></p>
 			<p> <a href="https://raisahernandez.github.io/General-Ecology/Day2_Intro_to_R.html">Class 02 - Intro to R</a></p>
 			<p> <a href="https://raisahernandez.github.io/General-Ecology/Day3_climates.html">Class 03 - Climates</a></p>
@@ -18,6 +18,9 @@
 			<p> <a href="https://raisahernandez.github.io/General-Ecology/Day5_adaptation_variable_environm.html">Class 05 - Adaptation to variable environments</a></p>
 			<p> <a href="https://raisahernandez.github.io/General-Ecology/Day6_evolution_adaptation.html">Class 06 - Evolution and Adaptation</a></p>
 			<p> <a href="https://raisahernandez.github.io/General-Ecology/Day11_population_distributions.html">Class 11 - Population Distributions</a></p>
+			
+			<h3>Assignments</h3>
+			<p> <a href="https://raisahernandez.github.io/General-Ecology/Homework_1_discrete_continuous_variables.html">Assigment 01 - Visualizing discrete and continuous variables</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
