--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			<p> <a href="https://raisahernandez.github.io/General-Ecology/Day11_population_distributions.html">Class 11 - Population Distributions</a></p>
 			
 			<h3>Assignments</h3>
-			<p> <a href="https://raisahernandez.github.io/General-Ecology/Homework_1_discrete_continuous_variables.html">Assigment 01 - Visualizing discrete and continuous variables</a></p>
+			<p> <a href="https://raisahernandez.github.io/General-Ecology/Homework_1_discrete_continuous_variables.html">Assignment 01 - Visualizing discrete and continuous variables</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
