--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 			<p> <a href="https://raisahernandez.github.io/General-Ecology/Day1_Install_R_RStudio.pdf">Class 00 - Installing R and RStudio</a></p>
 			<p> <a href="https://raisahernandez.github.io/General-Ecology/Day2_Intro_to_R.html">Class 02 - Intro to R</a></p>
 			<p> <a href="https://raisahernandez.github.io/General-Ecology/Day3_climates.html">Class 03 - Climates</a></p>
+			<p> <a href="https://raisahernandez.github.io/General-Ecology/Day3_climates_adapted.html">Class 03_adapted - Climates</a></p>
 			<p> <a href="https://raisahernandez.github.io/General-Ecology/Day4_biomes.html">Class 04 - Biomes</a></p>
 			<p> <a href="https://raisahernandez.github.io/General-Ecology/Day5_adaptation_variable_environm.html">Class 05 - Adaptation to variable environments</a></p>
 			<p> <a href="https://raisahernandez.github.io/General-Ecology/Day6_evolution_adaptation.html">Class 06 - Evolution and Adaptation</a></p>
