--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 			<p> <a href="https://raisahernandez.github.io/General-Ecology/Day3_climates_adapted.html">Class 03_adapted - Climates</a></p>
 			<p> <a href="https://raisahernandez.github.io/General-Ecology/Day4_biomes.html">Class 04 - Biomes</a></p>
 			<p> <a href="https://raisahernandez.github.io/General-Ecology/Day5_adaptation_variable_environm.html">Class 05 - Adaptation to variable environments</a></p>
+			<p> <a href="https://raisahernandez.github.io/General-Ecology/Day5_adaptation_variable_environm.html">Class 05 - Adaptation to variable environments_adapted</a></p>
 			<p> <a href="https://raisahernandez.github.io/General-Ecology/Day6_evolution_adaptation.html">Class 06 - Evolution and Adaptation</a></p>
 			<p> <a href="https://raisahernandez.github.io/General-Ecology/Day11_population_distributions.html">Class 11 - Population Distributions</a></p>
 			<br>
