--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			<p> <a href="https://raisahernandez.github.io/General-Ecology/Day5_adaptation_variable_environm.html">Class 05 - Adaptation to variable environments</a></p>
 			<p> <a href="https://raisahernandez.github.io/General-Ecology/Day5_adaptation_variable_environm_adapted.html">Class 05_adapted - Adaptation to variable environments</a></p>
 			<p> <a href="https://raisahernandez.github.io/General-Ecology/Day6_evolution_adaptation.html">Class 06 - Evolution and Adaptation</a></p>
-			<p> <a href="https://raisahernandez.github.io/General-Ecology/Day6_evolution_adaptation_adapted.html">Class 06_adapteds - Evolution and Adaptation</a></p>
+			<p> <a href="https://raisahernandez.github.io/General-Ecology/Day6_evolution_adaptation_adapted.html">Class 06_adapted - Evolution and Adaptation</a></p>
 			<p> <a href="https://raisahernandez.github.io/General-Ecology/Day11_population_distributions.html">Class 11 - Population Distributions</a></p>
 			<br>
 			<h3>Assignments</h3>
