--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			<h4>(Each activity builds upon previous ones)</h4>
 			<br>
 			<h3>In-Class Exercises</h3>
-			<p> <a href="https://raisahernandez.github.io/General-Ecology/Day1_Install_R_RStudio.pdf">Class 00 - Installing R and RStudio</a></p>
+			<p> <a href="https://raisahernandez.github.io/General-Ecology/Install_R_and_RStudio.pdf">Installing R and RStudio</a></p>
 			<p> <a href="https://raisahernandez.github.io/General-Ecology/Day2_Intro_to_R.html">Class 02 - Intro to R</a></p>
 			<p> <a href="https://raisahernandez.github.io/General-Ecology/Day3_climates.html">Class 03 - Climates</a></p>
 			<p> <a href="https://raisahernandez.github.io/General-Ecology/Day3_climates_adapted.html">Class 03_adapted - Climates</a></p>
