--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
 			<h2>California State University-Long Beach, Fall 2019</h2>
 			<h4>(Each activity builds upon previous ones)</h4>
 			<br>
-			<p> <a href="https://raisahernandez.github.io/General-Ecology/Install_R_and_RStudio.pdf">Intro I: Installing R and RStudio</a></p>
-			<p> <a href="https://raisahernandez.github.io/General-Ecology/Import_data_to_R.html">Intro II: Importing data to RStudio and getting ready to analize it</a></p>
+			<p> <a href="https://raisahernandez.github.io/General-Ecology/Install_R_and_RStudio.pdf">Installing R and RStudio</a></p>
+			<p> <a href="https://raisahernandez.github.io/General-Ecology/Import_data_to_R.html">Intro I: Importing data to RStudio and getting ready to analize it</a></p>
+			<p> <a href="https://raisahernandez.github.io/General-Ecology/Data_Management_tydiverse.html">Intro II: Data management using tidyverse</a></p>
 			<p> <a href="https://raisahernandez.github.io/General-Ecology/Day2_Intro_to_R.html">Class 02 - Intro to R</a></p>
 			<p> <a href="https://raisahernandez.github.io/General-Ecology/Day3_climates.html">Class 03 - Climates</a></p>
 			<p> <a href="https://raisahernandez.github.io/General-Ecology/Day3_climates_adapted.html">Class 03_adapted - Climates</a></p>
