--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
     		<div class="blurb">
         		<h1>BIOL 350: General Ecology</h1>
 			<h2>California State University-Long Beach, Fall 2019</h2>
-			<h4>(Each activity builds upon previous ones)</h4>
-			<br>
+			<h4>(Short introductory activities that build into each other)</h4>
 			<p> <a href="https://raisahernandez.github.io/General-Ecology/Install_R_and_RStudio.pdf">Installing R and RStudio</a></p>
 			<p> <a href="https://raisahernandez.github.io/General-Ecology/Import_data_to_R.html">Intro I: Importing data to RStudio and getting ready to analize it</a></p>
 			<p> <a href="https://raisahernandez.github.io/General-Ecology/Data_Management_tydiverse.html">Intro II: Data management using tidyverse</a></p>
