--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>BIOL 350: General Ecology</h1>
-			<h2>California State University-Long Beach, Fall 2019</h2>
+			<h2>California State University-Long Beach</h2>
+			<br>
 			<h3>Short introductory activities that build into each other</h3>
 			<p> <a href="https://raisahernandez.github.io/General-Ecology/Install_R_and_RStudio.pdf">Installing R and RStudio</a></p>
 			<p> <a href="https://raisahernandez.github.io/General-Ecology/Import_data_to_R.html">Intro I: Importing data to RStudio and getting ready to analize it</a></p>
