--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<p> <a href="https://raisahernandez.github.io/General-Ecology/Data_Management_tydiverse.html">Intro II: Data management using tidyverse</a></p>
 			<p> <a href="https://raisahernandez.github.io/General-Ecology/Data_Visual_ggplot2.html">Intro III: Data visualization using ggplot2</a></p>
 			<br>
-			<h3>R-based, quantitative activities for General Ecology</h3>
+			<h3>Quantitative activities for General Ecology</h3>
 			<p> <a href="https://raisahernandez.github.io/General-Ecology/Day3_climates.html">Class 03 - Climates</a></p>
 			<p> <a href="https://raisahernandez.github.io/General-Ecology/Day3_climates_adapted.html">Class 03_adapted - Climates</a></p>
 			<p> <a href="https://raisahernandez.github.io/General-Ecology/Day4_biomes.html">Class 04 - Biomes</a></p>
