--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         		<h1>BIOL 350: General Ecology</h1>
 			<h2>California State University-Long Beach</h2>
 			<br>
-			<h3>Short introductory activities. Each activity builds into the previous one:</h3>
+			<h4>Short introductory activities to R. Each activity builds into the previous one:</h4>
 			<p> <a href="https://raisahernandez.github.io/General-Ecology/Install_R_and_RStudio.pdf">Installing R and RStudio</a></p>
 			<p> <a href="https://raisahernandez.github.io/General-Ecology/Import_data_to_R.html">Intro I: Importing data to RStudio and getting ready to analize it</a></p>
 			<p> <a href="https://raisahernandez.github.io/General-Ecology/Data_Management_tydiverse.html">Intro II: Data management using tidyverse</a></p>
