--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
 			<p> <a href="https://raisahernandez.github.io/General-Ecology/Data_Visual_ggplot2.html">Intro III: Data visualization using ggplot2</a></p>
 			<br>
 			<h4>Quantitative activities for General Ecology:</h4>
-			<p> <a href="https://raisahernandez.github.io/General-Ecology/Day3_climates.html">Class 03 - Climates</a></p>
-			<p> <a href="https://raisahernandez.github.io/General-Ecology/Day3_climates_adapted.html">Class 03_adapted - Climates</a></p>
+			<p> <a href="https://raisahernandez.github.io/General-Ecology/Day3_climates.html">Climates</a></p>
 			<p> <a href="https://raisahernandez.github.io/General-Ecology/Day4_biomes.html">Class 04 - Biomes</a></p>
 			<p> <a href="https://raisahernandez.github.io/General-Ecology/Day5_adaptation_variable_environm.html">Class 05 - Adaptation to variable environments</a></p>
 			<p> <a href="https://raisahernandez.github.io/General-Ecology/Day5_adaptation_variable_environm_adapted.html">Class 05_adapted - Adaptation to variable environments</a></p>
