--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<br>
 			<h4>Quantitative activities for General Ecology:</h4>
 			<p> <a href="https://raisahernandez.github.io/General-Ecology/Day3_climates.html">Climates</a></p>
-			<p> <a href="https://raisahernandez.github.io/General-Ecology/Day4_biomes.html">Class 04 - Biomes</a></p>
+			<p> <a href="https://raisahernandez.github.io/General-Ecology/biomes.html">Biomes</a></p>
 			<p> <a href="https://raisahernandez.github.io/General-Ecology/Day5_adaptation_variable_environm.html">Class 05 - Adaptation to variable environments</a></p>
 			<p> <a href="https://raisahernandez.github.io/General-Ecology/Day5_adaptation_variable_environm_adapted.html">Class 05_adapted - Adaptation to variable environments</a></p>
 			<p> <a href="https://raisahernandez.github.io/General-Ecology/Day6_evolution_adaptation.html">Class 06 - Evolution and Adaptation</a></p>
