--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
 			<p> <a href="https://raisahernandez.github.io/General-Ecology/Day3_climates.html">Climates</a></p>
 			<p> <a href="https://raisahernandez.github.io/General-Ecology/biomes.html">Biomes</a></p>
 			<p> <a href="https://raisahernandez.github.io/General-Ecology/daptation_variable_environm.html">Adaptation to variable environments</a></p>
-			<p> <a href="https://raisahernandez.github.io/General-Ecology/Day6_evolution_adaptation.html">Class 06 - Evolution and Adaptation</a></p>
-			<p> <a href="https://raisahernandez.github.io/General-Ecology/Day6_evolution_adaptation_adapted.html">Class 06_adapted - Evolution and Adaptation</a></p>
+			<p> <a href="https://raisahernandez.github.io/General-Ecology/evolution_adaptation.html">Evolution and Adaptation</a></p>
 			<br>
 			<h3>Assignments</h3>
 			<p> <a href="https://raisahernandez.github.io/General-Ecology/Homework_1_discrete_continuous_variables.html">Assignment 01 - Visualizing discrete and continuous variables</a></p>
