--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         		<h1>BIOL 350: General Ecology</h1>
 			<h2>California State University-Long Beach</h2>
 			<br>
+			<h5>The following activites are designed to introduce data-centered approaches using programming language R (e.g., data management, data visualization, statistical analyses) to Biology majors. :</h5>
+			
 			<h4>Short introductory activities to R. Each activity builds into the previous one:</h4>
 			<p> <a href="https://raisahernandez.github.io/General-Ecology/Install_R_and_RStudio.pdf">Installing R and RStudio</a></p>
 			<p> <a href="https://raisahernandez.github.io/General-Ecology/Import_data_to_R.html">Intro I: Importing data to RStudio and getting ready to analize it</a></p>
