--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			<br>
 			<h5>The following activites are designed to introduce data-centered approaches using programming language R (e.g., data management, data visualization, statistical analyses) to Biology majors. :</h5>
 			
-			<h4>Short introductory activities to R. Each activity builds into the previous one:</h4>
+			<h4>Short introductory activities for R. Each activity builds into the previous one:</h4>
 			<p> <a href="https://raisahernandez.github.io/General-Ecology/Install_R_and_RStudio.pdf">Installing R and RStudio</a></p>
 			<p> <a href="https://raisahernandez.github.io/General-Ecology/Import_data_to_R.html">Intro I: Importing data to RStudio and getting ready to analize it</a></p>
 			<p> <a href="https://raisahernandez.github.io/General-Ecology/Data_Management_tydiverse.html">Intro II: Data management using tidyverse</a></p>
