--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         		<h1>BIOL 350: General Ecology</h1>
 			<h2>California State University-Long Beach</h2>
 			<br>
-			<h5>The following activites are designed to introduce data-centered approaches using programming language R (e.g., data management, data visualization, statistical analyses) to Biology majors. :</h5>
+			<h5>The following activites are designed to introduce data-centered approaches using programming language R (e.g., data management, data visualization, statistical analyses) to Ecology students. :</h5>
 			
 			<h4>Short introductory activities for R. Each activity builds into the previous one:</h4>
 			<p> <a href="https://raisahernandez.github.io/General-Ecology/Install_R_and_RStudio.pdf">Installing R and RStudio</a></p>
