--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
+			<h4>If interested in adapting these activities, do not hesitate in contacting the email at the bottom <h4>
     		<ul>
         		<li><a href="mailto:rai.hernandezpacheco@csulb.edu">email</a></li>
 			</ul>
