--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
-			<h6>If interested in adapting these activities, do not hesitate in contacting the email at the bottom <h6>
+			If interested in adapting these activities, do not hesitate in contacting the email at the bottom 
     		<ul>
         		<li><a href="mailto:rai.hernandezpacheco@csulb.edu">email</a></li>
 			</ul>
