--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     		<div class="blurb">
         		<h1>BIOL 350: General Ecology</h1>
 			<h2>California State University-Long Beach</h2>
-			<h5>The following activites are designed to introduce data-centered approaches using programming language R (e.g., data management, data visualization, statistical analyses) to General Ecology students.</h5>
+			The following activites are designed to introduce data-centered approaches using programming language R (e.g., data management, data visualization, statistical analyses) to General Ecology students.
 			<br>
 			<h4>Short introductory activities for R. Each activity builds into the previous one:</h4>
 			<p> <a href="https://raisahernandez.github.io/General-Ecology/Install_R_and_RStudio.pdf">Installing R and RStudio</a></p>
@@ -29,7 +29,8 @@
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
-			If interested in adapting these activities, do not hesitate in contacting the email at the bottom 
+			<br>
+			If interested in adapting these activities, do not hesitate in contacting the email at the bottom. 
     		<ul>
         		<li><a href="mailto:rai.hernandezpacheco@csulb.edu">email</a></li>
 			</ul>
