--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         		<h1>BIOL 350: General Ecology</h1>
 			<h2>California State University-Long Beach</h2>
 			The following activites are designed to introduce data-centered approaches using programming language R (e.g., data management, data visualization, statistical analyses) to General Ecology students.
-			<br>
+			<br><br>
 			<h4>Short introductory activities for R. Each activity builds into the previous one:</h4>
 			<p> <a href="https://raisahernandez.github.io/General-Ecology/Install_R_and_RStudio.pdf">Installing R and RStudio</a></p>
 			<p> <a href="https://raisahernandez.github.io/General-Ecology/Import_data_to_R.html">Intro I: Importing data to RStudio and getting ready to analize it</a></p>
@@ -30,7 +30,7 @@
 		</div><!-- /.container -->
 		<footer>
 			<br>
-			If interested in adapting these activities, do not hesitate in contacting the email at the bottom. 
+			<h4>If interested in adapting these activities, do not hesitate in contacting the email at the bottom.<h4> 
     		<ul>
         		<li><a href="mailto:rai.hernandezpacheco@csulb.edu">email</a></li>
 			</ul>
