--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>BIOL 350: General Ecology</title>
+		<title>General Ecology</title>
 		<link rel="stylesheet" type="text/css" href="/General-Ecology/css/main.css">
 	</head>
 	<body>
 
 		<div class="container">
     		<div class="blurb">
-        		<h1>BIOL 350: General Ecology</h1>
-			<h2>California State University-Long Beach</h2>
+        		<h1>General Ecology</h1>
 			The following activites are designed to introduce data-centered approaches using programming language R (e.g., data management, data visualization, statistical analyses) to General Ecology students.
 			<br><br>
 			<h4>Short introductory activities for R. Each activity builds into the previous one:</h4>
