--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 			<p> <a href="https://raisahernandez.github.io/General-Ecology/biomes.html">Biomes</a></p>
 			<p> <a href="https://raisahernandez.github.io/General-Ecology/adaptation_variable_environm.html">Adaptation to variable environments</a></p>
 			<p> <a href="https://raisahernandez.github.io/General-Ecology/evolution_adaptation.html">Evolution and Adaptation</a></p>
+			<p> <a href="https://raisahernandez.github.io/General-Ecology/mark_recap.html">Lincoln-Petersen index</a></p>
 			<br>
 			<h3>Assignments</h3>
 			<p> <a href="https://raisahernandez.github.io/General-Ecology/Homework_1_discrete_continuous_variables.html">Assignment 01 - Visualizing discrete and continuous variables</a></p>
