--- a/mark_recap.html
+++ b/mark_recap.html
@@ -316,7 +316,7 @@ barplot(sum$n)
 barplot(sum$n,names.arg = sum$site)
 
 # Adding the y-axis lable
-barplot(sum$n,names.arg = sum$site, ylab=&quot;Salamander abundance&quot;</code></pre>
+barplot(sum$n,names.arg = sum$site, ylab=&quot;Salamander abundance&quot;)</code></pre>
 <blockquote>
 <p><span style="color:red; font-family:Arial; font-size:1em;"><strong>Challenge:</strong></span> Estimate the average salamander abundance across seasons. <br><br></p>
 </blockquote>
