--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 			<p> <a href="https://raisahernandez.github.io/General-Ecology/Import_data_to_R.html">Intro I: Importing data to RStudio and getting ready to analize it</a></p>
 			<p> <a href="https://raisahernandez.github.io/General-Ecology/Data_Management_tydiverse.html">Intro II: Data management using tidyverse</a></p>
 			<p> <a href="https://raisahernandez.github.io/General-Ecology/Data_Visual_ggplot2.html">Intro III: Data visualization using ggplot2</a></p>
+			<p> <a href="https://raisahernandez.github.io/General-Ecology/IntroDataCarpentry.pdf">Introductory R workshop using Data Carpentry and Cayo Santiago rhesus macaque data</a></p>
 			<br>
 			<h4>Quantitative activities for General Ecology:</h4>
 			<p> <a href="https://raisahernandez.github.io/General-Ecology/climates.html">Climates</a></p>
