--- a/final_product.html
+++ b/final_product.html
@@ -417,8 +417,14 @@ text-align: justify}
 <li>Minimize threats and distractions - all students are participants with no risk of being wrong and there is still surprise in the routinized activity.</li>
 <li>Foster collaboration and community - discussions are in group.</li>
 <li>Highlight patterns, critical features, big ideas, and relationships - multiple examples and non-examples are provided to emphasize critical features.</li>
-<li>Maximize transfer and generalization - multiple opportunities for review and practice are provided during the semester.</li>
+<li>Maximize transfer and generalization - multiple opportunities for review and practice are provided during the semester. <br><br></li>
 </ul>
+<style>
+body {
+text-align: justify}
+</style>
+<p><strong>Specific details:</strong></p>
+<p>I carried out this activity during the first 3-5 minutes of each class section (twice a week). My classroom was organized in tables of ~6 students. Each table had a TV monitore where I projected the figure (Active Learning Classroom). Thus, it served as a routinized activity to make students talk to each other during those first minutes of class. After their brief discussion, I went go by table asking for a single observation, or more specific questions regarding patterns, statistics, and interpretation. I started the adaptation after implementing the original module for several weeks.</p>
 <hr />
 <br>
 <center>
