--- a/final_product.html
+++ b/final_product.html
@@ -424,7 +424,7 @@ body {
 text-align: justify}
 </style>
 <p><strong>Specific details:</strong></p>
-<p>I carried out this activity during the first 3-5 minutes of each class section (twice a week). My classroom was organized in tables of ~6 students. Each table had a TV monitore where I projected the figure (Active Learning Classroom). Thus, it served as a routinized activity to make students talk to each other during those first minutes of class. After their brief discussion, I went go by table asking for a single observation, or more specific questions regarding patterns, statistics, and interpretation. I started the adaptation after implementing the original module for several weeks.</p>
+<p>I carried out this activity during the first 3-5 minutes of each class section (twice a week). My classroom was organized in tables of ~6 students. Each table had a TV monitor where I projected the figure (Active Learning Classroom). Thus, it served as a routinized activity to make students talk to each other during those first minutes of class. After their brief discussion, I went to each table asking for a single observation, or more specific questions regarding patterns, statistics, and interpretation. I started the adaptation after implementing the original module for several weeks.</p>
 <hr />
 <br>
 <center>
