--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>General Ecology</h1>
-			The following activites are designed to introduce data-centered approaches using programming language R (e.g., data management, data visualization, statistical analyses) to General Ecology students.
+			Super-short activities to introduce R to life (e.g., data management, data visualization, statistical analyses) to General Ecology students.
 			<br><br>
 			<h4>Short introductory activities for R. Each activity builds into the previous one:</h4>
 			<p> <a href="https://raisahernandez.github.io/General-Ecology/Install_R_and_RStudio.pdf">Installing R and RStudio</a></p>
