--- a/final_product.html
+++ b/final_product.html
@@ -394,7 +394,7 @@ div.green { background-color:#DEF4E5; border-radius: 5px; padding: 20px;
 text-align: justify}
 </style>
 <div class="green">
-<p><strong>ADAPTATION OVERVIEW</strong> This adaptation was implemented in a General Ecology course with the main goal of facilitating brief discussions on data visualization. The adaptation focuses on presenting students figures with all the information in their axes. However, such figures will present a medium level of quality (Versions A) to encourage students to discuss conceptually in groups and come up with suggestions on how to make them better visualizations (Versions B). Here, I provide the R codes for these new figures so that instructors can manipulate them accordingly to their course activity.</p>
+<p><strong>ADAPTATION OVERVIEW</strong> This adaptation was implemented in a General Ecology course with the main goal of facilitating brief discussions on data visualization. The adaptation focuses on presenting students figures with all the information in their axes. However, such figures present a medium level of quality (Versions A) to encourage students to discuss conceptually in groups and come up with suggestions on how to make them better visualizations (Versions B). Here, I provide the R codes for these new figures so that instructors can manipulate them accordingly to their course activity.</p>
 </div>
 <p><br><br></p>
 <h4>
