--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 			<p> <a href="https://raisahernandez.github.io/General-Ecology/Data_Visual_ggplot2.html">Intro III: Data visualization using ggplot2</a></p>
 			<br>
 			<h4>Quantitative activities for General Ecology:</h4>
-			<p> <a href="https://raisahernandez.github.io/General-Ecology/climates.html">Climates</a></p>
-			<p> <a href="https://raisahernandez.github.io/General-Ecology/biomes.html">Biomes</a></p>
+			<p> <a href="https://raisahernandez.github.io/General-Ecology/climates.html">Solar radiation and global temperatures</a></p>
+			<p> <a href="https://raisahernandez.github.io/General-Ecology/biomes.html">Biomes and climate diagrams</a></p>
 			<p> <a href="https://raisahernandez.github.io/General-Ecology/adaptation_variable_environm.html">Adaptation to variable environments</a></p>
 			<p> <a href="https://raisahernandez.github.io/General-Ecology/evolution_adaptation.html">Evolution and Adaptation</a></p>
 			<p> <a href="https://raisahernandez.github.io/General-Ecology/final_product.html">BIOMAAP Adaptation</a></p>
