--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>General Ecology</h1>
-			The following activites are designed to introduce data-centered approaches using programming language R (e.g., data management, data visualization, statistical analyses) to General Ecology students. 
+			The following activites were designed to introduce data-centered approaches using R programming language to General Ecology students. 
 			<br><br>
 			<h4>Super-short introductory activities to R. Each activity builds into the previous one:</h4>
 			<p> <a href="https://raisahernandez.github.io/General-Ecology/Import_data_to_R.html">Intro I: Importing data to RStudio and getting ready to analize it</a></p>
