--- a/climates.html
+++ b/climates.html
@@ -417,6 +417,8 @@ text-align: justify}
 <p><br></p>
 <p><strong>Materials:</strong></p>
 <ul>
+<li>R and RStudio</li>
+<li>Packages ggplot2 and Rmisc</li>
 <li><a href="https://power.larc.nasa.gov/data-access-viewer/">NASA Surface meteorology and Solar Energy database</a></li>
 <li><a href="https://raisahernandez.github.io/General-Ecology/insol_temp.csv">insol_temp dataset</a></li>
 </ul>
