--- a/climates.html
+++ b/climates.html
@@ -426,7 +426,8 @@ text-align: justify}
 <p><br></p>
 <div id="insolation-and-latitude" class="section level2">
 <h2>1. Insolation and latitude</h2>
-<p>Insolation is the solar radiation that reaches the Earth’s surface. Let’s first explore the relationship between insolation and latitude. <br></p>
+<p>Insolation is the solar radiation that reaches the Earth’s surface. Let’s first explore the relationship between insolation and latitude.</p>
+<p><br></p>
 <p><strong>A. Import the “insol_temp” dataset to RStudio</strong></p>
 <p>Let’s import and explore the “insol_temp” data. For this, save the data file in your computer “as page source”.</p>
 <pre class="r"><code># importing the data
