--- a/adaptation_variable_environm.html
+++ b/adaptation_variable_environm.html
@@ -405,7 +405,7 @@ div.green { background-color:#DEF4E5; border-radius: 5px; padding: 20px;
 text-align: justify}
 </style>
 <div class="green">
-<p><strong>OVERVIEW.</strong> Environmental variation favors the evolution of variable phenotypes. Take for instance a plant. Its leaves will grow larger, thicker, or with more chemical defenses depending on sunlight, water availability and the threat of herbivory. These are examples of <strong>phenotypic plasticity</strong> - changes in the traits of organisms during their lifetime, in response to abiotic or biotic features of the environment. If this hypothetical plant was able to present one single phenotype exclusively, no matter the change in environment (e.g., dry year versus wet year), the fitness of that individual would be low in contrast to an individual able to change its phenotype given a change in the environment.</p>
+<p><strong>OVERVIEW.</strong> Changing environments favors the evolution of variable phenotypes. Take for instance a plant. Its leaves will grow larger, thicker, or with more chemical defenses depending on sunlight, water availability and the threat of herbivory. These are examples of <strong>phenotypic plasticity</strong> - changes in the traits of organisms during their lifetime in response to environmental variability. Today, we will measure changes in morphological traits of tadpoles given a change in their environment.</p>
 </div>
 <hr />
 <p><br></p>
