--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			The following activites were designed to introduce data-centered approaches using R programming language to General Ecology students. 
 			<br><br>
 			<h4>Super-short introductory activities to R. Each activity builds into the previous one:</h4>
-			<p> <a href="https://raisahernandez.github.io/General-Ecology/Import_data_to_R.html">Intro I: Importing data to RStudio and getting ready to analize it</a></p>
+			<p> <a href="https://raisahernandez.github.io/General-Ecology/Import_data_to_R.html">Intro I: Creating scripts and importing data</a></p>
 			<p> <a href="https://raisahernandez.github.io/General-Ecology/Data_Management_tydiverse.html">Intro II: Data management using tidyverse</a></p>
 			<p> <a href="https://raisahernandez.github.io/General-Ecology/Data_Visual_ggplot2.html">Intro III: Data visualization using ggplot2</a></p>
 			<br>
