--- a/Data_Management_tydiverse.html
+++ b/Data_Management_tydiverse.html
@@ -401,7 +401,7 @@ code {white-space:pre !important; overflow-x:scroll !important;font-size:12pt; f
 </style>
 <hr />
 <p><br></p>
-<p><em>This activity builds on <a href="https://raisahernandez.github.io/General-Ecology/Import_data_to_R.html">Part I: Intro to R and RStudio: data management and visualization</a></em></p>
+<p><em>This activity builds on <a href="https://raisahernandez.github.io/General-Ecology/Import_data_to_R.html">Intro I: Creating scripts and importing data</a></em></p>
 <p><br></p>
 <p>Before any data analysis, there is an important step that you cannot avoid: data management. Through the process of data management you are able to re-arrange your dataset as needed. However, keep in mind there are generalizations on how to do good data management.</p>
 <p><br></p>
