--- a/Data_Visual_ggplot2.html
+++ b/Data_Visual_ggplot2.html
@@ -419,7 +419,7 @@ code {white-space:pre !important; overflow-x:scroll !important;font-size:12pt; f
 <p><br></p>
 <div id="data-visualization-with-ggplot2" class="section level2">
 <h2>1. Data visualization with ggplot2</h2>
-<p><strong>A. Installing package ggplot2.</strong></p>
+<p><strong>A. Install package ggplot2.</strong></p>
 <p>To plot the data, we will use package “ggplot2”. So, let’s install ggplot2.</p>
 <pre class="r"><code># installing package ggplot2
 install.packages(&quot;ggplot2&quot;,repos=&#39;http://cran.us.r-project.org&#39;)
